# my_bot

./: .gitignore  README.md  package.xml
.devcontainer/: Dockerfile  devcontainer.json
src/: package.xml
src/config/: view_bot.rviz
src/description/: robot_core.xacro
src/diff_drive_robot/: README.md
src/diff_drive_robot/application/: CMakeLists.txt  package.xml
src/diff_drive_robot/bringup/: package.xml
src/diff_drive_robot/bringup/config/: ball_tracker_params_robot.yaml  diff_drive.rviz  image_saver.yaml  mapper_params_online_async.yaml  my_controller.yaml  robot.rviz  ros_gazebo_topic_bridge.yaml  rrbot.rviz  sim.rviz  twist_mux.yaml  usb_camera.yaml
src/diff_drive_robot/bringup/launch/: ball_tracker.launch.py  camera.launch.py  image_saver.launch.py  joystick.launch.py  localization_launch.py  online_async_launch.py  robot.launch.py  robot_dev_machine.launch.py  robot_rviz.launch.py  robot_state_publisher.launch.py  rplidar.launch.py  sim.launch.py  usb_camera.launch.py
src/diff_drive_robot/description/: CMakeLists.txt
src/diff_drive_robot/description/maps/: sim.pgm  sim.yaml  sim_serial.data
src/diff_drive_robot/description/maps/Sollunden/: van3.yaml
src/diff_drive_robot/gazebo/: CMakeLists.txt  README.md  package.xml
src/diff_drive_robot/gazebo/worlds/: diff_drive.sdf
src/launch/: robot_state_publisher.launch.py
src/ros_gz_project_template/ros_gz_example_application/: package.xml
src/ros_gz_project_template/ros_gz_example_bringup/config/: diff_drive.rviz  gazebo.config  my_controller.yaml
src/ros_gz_project_template/ros_gz_example_bringup/launch/: camera.launch.py  diff_drive.launch.py  robot.launch.py  robot_state_publisher.launch.py  rplidar.launch.py  sim.launch.py
src/ros_gz_project_template1/: template_workspace.yaml
(+17 files in other folders)
